--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# session Name
+bvvip/
+
 # Logs
 logs
 *.log
@@ -6,6 +9,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+package-lock.json
+
+test.ts
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
