--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pino": "^8.18.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
