--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@types/http-errors": "^2.0.4",
+    "@types/node": "^20.11.17",
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
