--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@types/http-errors": "^2.0.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.17",
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.3",
     "pino": "^8.18.0",
