--- a/package.json
+++ b/package.json
@@ -6,25 +6,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "build": "npx tsc --build"
+    "build": "npx tsc --build",
+    "prisma:migrate": "npx prisma migrate dev --name dev",
+    "prisma:generate": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@prisma/client": "^5.20.0",
     "@types/http-errors": "^2.0.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.17",
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.3",
     "pino": "^8.18.0",
+    "prisma": "^5.20.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
