--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@whiskeysockets/baileys": "^6.6.0",
     "dotenv": "^16.4.1",
     "express": "^4.21.0",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.3",
