--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.17",
     "@whiskeysockets/baileys": "^6.6.0",
+    "cron-parser": "^4.9.0",
     "dotenv": "^16.4.1",
     "express": "^4.21.0",
     "moment-timezone": "^0.5.45",
