adding env DATABASE_URL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 APP_PORT=3000
 SESSION_NAME=bvvip
 X_API_KEY=UUID
+
+DATABASE_URL="postgresql://whatsapp-adnan:whatsapp-adnan@pg.icc.private:5432/adnan-whatsapp?schema=public"
