--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ APP_PORT=3000
 SESSION_NAME=bvvip
 X_API_KEY=UUID
 
-DATABASE_URL="postgresql://whatsapp-adnan:whatsapp-adnan@pg.icc.private:5432/adnan-whatsapp?schema=public"
+DATABASE_URL="postgresql://whatsapp-adnan:whatsapp-adnan@192.168.60.35:5433/whatsapp-adnan?schema=public"
