--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ APP_PORT=3000
 SESSION_NAME=bvvip
 X_API_KEY=UUID
 TEMPORAL_ADDRESS=192.168.50.102:7233
+TEMPORAL_NAMESPACE=whatsapp-adnan
+TEMPORAL_TASKQUEUE=whatsapp-adnan
 
 DATABASE_URL="postgresql://whatsapp-adnan:whatsapp-adnan@192.168.50.102:5432/whatsapp-adnan?schema=public"
