--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@temporalio/client": "^1.11.3",
     "@temporalio/worker": "^1.11.3",
     "@temporalio/workflow": "^1.11.3",
-    "nanoid": "3.x",
     "@types/http-errors": "^2.0.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.17",
@@ -33,11 +32,13 @@
     "express": "^4.21.0",
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "3.x",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.3",
     "pino": "^8.18.0",
     "prisma": "^5.20.0",
     "qrcode-terminal": "^0.12.0",
+    "randexp": "^0.5.3",
     "readline": "^1.3.0",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
